--- a/app/globals.css
+++ b/app/globals.css
@@ -19,3 +19,10 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+@layer components {
+  .primary-btn {
+    @apply w-full bg-orange-500 text-white text-lg font-medium
+    rounded-md text-center hover:bg-orange-400 transition-colors;
+  }
+}
